# pogo

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  mkdocs.yml  notebook_builder.py  pyproject.toml
.github/workflows/: docs.yml
app/: agent.py  cli.py  ingestion.py  intent.py  llm_agent.py  nbexport.py  profiling.py  semantic_sketch.py  sql_generator.py  viz.py
backend/: .env  .pre-commit-config.yaml  AGENTS.md  pyproject.toml
backend/ci/: setup.sh
backend/pogo/: __main__.py  cli.py  cli_ui.py  llm_agent.py  semantic_sketch.py  session.py  steps.py
backend/pogo/api/: __init__.py  app.py  store.py
backend/tests/fixtures/airway/: airway_counts.csv  airway_de_results.csv  airway_meta.csv
backend/tests/integration/: test_llm_notebook.py  test_resume_notebook.py
backend/tests/unit/: test_notebook_header.py  test_semantic_sketch.py  test_slugify.py  test_sql_generator.py  test_viz.py
biosignal/: __main__.py  cli.py  notebook_builder.py
ci/: bandit.yaml  docs_serve.sh  install.sh  local_ci.sh  run_all.sh  run_tests.sh  setup.sh
docs/: AGENTS.md  README.md  human.md  index.html  index.md  introduction.md  introduction_human.md  introduction_machine.md  plan.md  testing.md
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/workbooks/[id]/: page.module.css  page.tsx
frontend/src/lib/: api.ts
pogo/: cli.py  cli_ui.py  llm_agent.py  notebook_builder.py  session.py
tests/: test_e2e_airway.py
tests/integration/: test_llm_notebook.py
tests/unit/: test_ingestion_profiling.py  test_nbexport.py  test_notebook_header.py  test_semantic_sketch.py  test_slugify.py  test_sql_generator.py  test_viz.py
