[project]
name = "biosignal"
version = "0.1.0"
description = "Dataset-agnostic generative BI app for bioinformatics"
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-Proprietary"
keywords = ["bi", "bioinformatics", "duckdb", "llm"]
authors = [
  {name = "biosignal"}
]

dependencies = [
  "duckdb>=0.9.2",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
  "openpyxl>=3.1.0",
]

[project.optional-dependencies]
 dev = [
  "pytest>=7.4.0",
]

[project.scripts]
biosignal = "biosignal.cli:main"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "biosignal"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
