[project]
name = "pogo"
version = "0.1.0"
description = "Dataset-agnostic generative BI app for bioinformatics"
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-Proprietary"
keywords = ["bi", "bioinformatics", "duckdb", "llm"]
authors = [
  {name = "pogo"}
]

dependencies = [
  "duckdb>=0.9.2",
  "loguru>=0.7.0",
  "papermill>=2.5.0",
  "ipykernel>=6.29.0",
  "nbconvert>=7.16.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
  "openpyxl>=3.1.0",
  "pydantic-ai-slim[anthropic,bedrock]>=0.0.14",
  "boto3>=1.34.0",
  "questionary>=2.0.1",
  "rich>=13.7.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pre-commit>=3.7.0",
  "ruff>=0.5.0",
  "ty>=0.0.1",
  "bandit>=1.7.8",
  "pip-audit>=2.7.0",
]

[project.scripts]
pogo = "pogo.cli:main"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pogo*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "integration: requires a real LLM backend and credentials",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ty.environment]
root = ["."]
